--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "isysd",
   "license": "MIT",
   "dependencies": {
-    "guld-fs": "^1.2.5",
+    "guld-fs": "^1.2.6",
     "user-home": "^2.0.0"
   },
   "devDependencies": {
@@ -39,5 +39,7 @@
   "readme": "README.md",
   "engines": {
     "node": ">=7"
-  }
+  },
+  "homepage": "https://github.com/isysd/tech-js-node_modules-guld-git-path#readme",
+  "repository": "git@github.com:isysd/tech-js-node_modules-guld-git-path.git"
 }
